# SeqLock

./: .gitignore  CMakeLists.txt  README.md
images/: v0.drawio  v2.drawio
src/: CMakeLists.txt  seqlock.hpp
src/seqlock_versions/: seqlock_v0_wrong.hpp  seqlock_v1_right.hpp  seqlock_v2_wrong.hpp
src/util/: helper_data_types.hpp  helper_traits.hpp
test/: CMakeLists.txt  seqlock_test.cpp  seqlock_v0_test.cpp
