file(GLOB TEST_SOURCES "*.cpp")

foreach(TEST_SOURCE ${TEST_SOURCES})
    get_filename_component(TEST_NAME ${TEST_SOURCE} NAME_WE)
    add_executable(${TEST_NAME} ${TEST_SOURCE})
    target_link_libraries(${TEST_NAME} PRIVATE SeqLock)
    find_package(GTest REQUIRED)
    target_link_libraries(${TEST_NAME} PRIVATE GTest::GTest GTest::Main)
    enable_testing()
    add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})
endforeach()